--- a/index_Bar.html
+++ b/index_Bar.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/libs/oj/v2.0.1/alta/oj-alta-min.css"/>
         <link href='http://cdn.jsdelivr.net/yasqe/2.10.0/yasqe.min.css' rel='stylesheet' type='text/css'/>
         <script src='http://cdn.jsdelivr.net/yasqe/2.10.0/yasqe.bundled.min.js'></script>
+        <script src="js/require-config.js"></script>
         <script data-main="js/main_Bar" src="js/libs/require/require.js"></script>
     </head>
     <body>
@@ -29,13 +30,13 @@
                 <div class="oj-flex">
                     <!-- テキストエリア及びボタンの設定:  ここから -->
                     <div class="oj-panel oj-margin oj-flex-item">
-                        <div class="oj-flex">  
+                        <div class="oj-flex">
                             <div class="oj-flex-item">
                                 <label for="sparql_textarea" class="oj-label">Query Text</label>
                                 <br/>
 				<div id="sparql_textarea"></div>
                                 <br/>
-                                <button data-bind="click: Search">Run Query</button>
+                                <button data-bind="click: search">Run Query</button>
                                 <br/><br/>
                             </div>
                         </div>
